syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.tesisaoskaunto.projectservice.grpc.proto";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
}

message SizeInput {
  string name = 2;
  bool is_active = 3;
}

message CreateProductRequest {
  string name = 2;
  double original_price = 3;
  double discount = 4;
  string image = 5;
  string category = 6;
  string description = 7;
  repeated SizeInput sizes = 8;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
}
